# ChangeLog for sys-firmware/ipxe
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-firmware/ipxe/ChangeLog,v 1.15 2013/11/07 15:48:40 cardoe Exp $

*ipxe-1.0.0_p20130925 (07 Nov 2013)

  07 Nov 2013; Doug Goldstein <cardoe@gentoo.org> +ipxe-1.0.0_p20130925.ebuild:
  Fix issue with register clobbering and gcc 4.8. bug #487254

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ipxe-1.0.0_p20130624.ebuild:
  Stable for x86, wrt bug #483770

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ipxe-1.0.0_p20130624.ebuild:
  Stable for amd64, wrt bug #483770

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ipxe-1.0.0_p20130225.ebuild:
  Stable for x86, wrt bug #475110

  30 Jun 2013; Doug Goldstein <cardoe@gentoo.org> ipxe-1.0.0_p20130624.ebuild:
  Updates from Jeroen Roovers <jer@gentoo.org> and Michael Weber
  <xmw@gentoo.org> to handle users using the gold linker instead of the default
  bfd linker more gracefully.

  28 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ipxe-1.0.0_p20130225.ebuild:
  Stable for amd64, wrt bug #475110

  27 Jun 2013; Doug Goldstein <cardoe@gentoo.org> ipxe-1.0.0_p20130225.ebuild,
  ipxe-1.0.0_p20130624.ebuild:
  Use filename pointers to give a meaningful name to the tarball.

  27 Jun 2013; Doug Goldstein <cardoe@gentoo.org> ipxe-1.0.0_p20130624.ebuild:
  Simplify generating our configs for VMWare.

  27 Jun 2013; Doug Goldstein <cardoe@gentoo.org> ipxe-1.0.0_p20120905.ebuild,
  ipxe-1.0.0_p20130225.ebuild, ipxe-1.0.0_p20130624.ebuild:
  Generally disable -Werror.

*ipxe-1.0.0_p20130225 (27 Jun 2013)
*ipxe-1.0.0_p20130624 (27 Jun 2013)

  27 Jun 2013; Doug Goldstein <cardoe@gentoo.org> +ipxe-1.0.0_p20130225.ebuild,
  +ipxe-1.0.0_p20130624.ebuild:
  Add latest iPXE and add the current version that QEMU uses as well. bug
  #462898

  26 Jan 2013; Doug Goldstein <cardoe@gentoo.org> ipxe-1.0.0_p20120905.ebuild:
  USE=iso needs virtual/cdrtools to successfully build as discovered by Homer