@@ -4,9 +4,9 @@ DESCRIPTION=Open source network boot (PXE) firmware
 EAPI=5
 HOMEPAGE=http://ipxe.org
 IUSE=iso +qemu undi usb vmware
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=https://git.ipxe.org/ipxe.git/snapshot/cba22d36b77da53890bd65fdadd0e63925687af0.tar.bz2 -> ipxe-1.0.0_p20130925-cba22d3.tar.bz2
-_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=ab23d3aaac1e4799d04fa124b2fdd7d5
+_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=572acf94ba74fe1edc5e680d39951f89
