@@ -8,19 +8,23 @@ DIST ipxe-1.0.0_p20130925-cba22d3.tar.bz2 2240189 SHA256 c9c819bac8a925aad30ac88
 EBUILD ipxe-1.0.0_p20120905.ebuild 1736 SHA256 6f5fa565d43bee60cc94023f93e21cb5e5d2247d2740d477014ca70d13434429 SHA512 7ee3a59899941bb80cfbad7b0c09301bcd2b0fdc070382a77fa46972451b4abdd0a9085ff09231b18c69ffff6a94806845e149e7b1512bd52a91ebffd5f8fe6b WHIRLPOOL 3449f9f7a0e0c58de80adf05a02bdc1d4151a353e561c000b0ca4ba2c78bb51b3b447995db62cc82a67492712a13c2f68560c96da1ea558c0eac6a63e930ee3f
 EBUILD ipxe-1.0.0_p20130225.ebuild 1923 SHA256 c6f6e5928b38f5848b101d4bf1135abdd628cf5c9c30fee567d3bde595917c2a SHA512 20b13e4750ef7a79cde0751225b8286e3498cf69799d7553e02d94ab40ec745ca355813424cc7dce24862fdc8c2a188a1a0671676953911d3917656c0330396c WHIRLPOOL 6e6a26b99522ea58144cf8a4ab3ce6389138866b692daabd6735e90ee5d0b7f69772de22874421771bf57eb55899509598843722ca3923f06cce7f3d47d2e6c4
 EBUILD ipxe-1.0.0_p20130624.ebuild 2335 SHA256 9476a77b583cddea480c042a09a0c0bb4f598ad7be371f57dc536fd82c8fe15d SHA512 d3731dd9f31e8782d95d3b2279699f31cb8d0f6ce0c9694f970d9b0db9d86023346840c5a3b2b58e1d58c635cffcf108cb7d9d8ce7d5dbf21a522ccb88e1219f WHIRLPOOL 2a82f85e809e7866ad2368760c96b624a02f08e0e6ad8de207dd7f5ec047f544b825949e749b63146258aff545aa442a916aa88d997edfdc80a03ce33ff05674
-EBUILD ipxe-1.0.0_p20130925.ebuild 2340 SHA256 6f81532f345c1733b3194622125448df9464b94877f9aed032409badd173ba31 SHA512 5b09e65f882d5b27f1afce83615c1b1fe56e651a596b37d1ce12eb6f397c773ac25099eabc3c86b14405da4eec262840bef8880c586ee54e22cc6cd72f52880a WHIRLPOOL 7e840c9bcbcff3f48aced69de22cc43473b15a1cf14d70eac0333b789fac2c0bb987f92bfbf84d45d752644c64f86efe5784b2d206704f4993771486cb4bb6df
-MISC ChangeLog 2553 SHA256 9fd618510103b6478b7513ea1dfcff0049f29c0968a65a86213f6cdefbbe282a SHA512 9fe766945b8f6b149793cd1cedea63a4a05fe27c1cfb93f67342c403c4c3a36bac66d6399e9a140c520b587213bb30ad63ad8eb80aab360ea1722cc82b8ef89b WHIRLPOOL 6167d053fbf2cc32bbadeb3094b47ca45ce3b07586f1a426832adc8aba2147f9a5de228153501b055644724f73df8e6e3864b4daadbb2caa534cfaf24d9027dc
+EBUILD ipxe-1.0.0_p20130925.ebuild 2335 SHA256 424962b173fb8e4b773d999e170e15c3cbf36aafef06f9e60a5179332b4c2b5c SHA512 e42c40250c76213a202c640f2efbd5dbf3302ca7f47c40cc9203e91122b10a7bdfc9eec4aa6e9c0ae4249db47e7688bd41a82fc670425f75b596979681ad1143 WHIRLPOOL 0290b7d4005ee6ac25d803646a01fa50fff01ddd95e1002c1a23f21361ce0573772aa465ba985b998140aabb55c3e5fdd2b080d5138553318f77f5c33cb64e08
+MISC ChangeLog 2778 SHA256 d1717d538dfc1404d17898815a50c226f5e38a92b39819a8a45ab9736057b96f SHA512 6c6462b8d6032a64cde9eba8988465ac9fdb6051c74cfa31fe91f72d395f8a77d88ea5aee3e9aedd94c5242dad0340ff54239e8451ee28290569ceec198d4045 WHIRLPOOL 611cc2fca9b6e33dee7c146d5e936843aca229462695b9a5e1ed8333be752535461dab5347cc04735ed00942e0e7f38312dcfd190114d116c7b7f97c9b30cc5b
 MISC metadata.xml 691 SHA256 f0f4dc35384ae2bbc0e938812ae3ec259c490e101fe978e2a7cc8ce8eb3d6a7b SHA512 1e1063f205a4a284224e229fa675f6eb83f03ee80c3874198740da15744961664c3f6fe0ec6c1211dcabfe1204bc92ec355b98075c5d626c3493bfbc7de08ae7 WHIRLPOOL 435dfad45383449b30a12b1caf484f05b39102d5132c9dd5573fddb84cfa2c987e6db700b0bc656e821cbc7fde5b04af5504fd367d665027b7eeef06853ff413
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQF8BAEBCABmBQJSe7ZdXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
-N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvfjEH/3NCXXNqnUKpOrtadsYlmuPB
-8uj3wonH5slwMwbkJNthK+ri41nrOEnL8hQbHOZtiID/XT1vnS9XNMZ6jgoDo3fe
-U+U9n4NiQkKoisgYYlN4qT6q2lKlOCSt0LNcsXtPwqdVvBOxLYa7GxQqaYYmMGv8
-UmnNDTaEqDt6BqcXrACpuUsepfzAi7DGPHS50Y+6eEpQPbaIonlMkOPiAxslsXch
-R6JGJ94+1bGzBZY9oHn/k0Fvq1lPvmKAiQDgYLeOegFcjZKciSsWMUv9MGpPVFjH
-zntq1qNPg9ZDxFnNH/qym7j086NIjv2SFbNVusd/OJmEpfqZKOFAcPT60pOkwdM=
-=kBxi
+iQIcBAEBCAAGBQJURLOBAAoJELp701BxlEWfw9sQAJkqkUr1lC34g1xGZxGPQWGf
+nU5rFG00fxEOGgj0wwzYffcd8dFIzGCT9j0LHlzCfyAJlBk7dPX2dlMsxDH/dyHl
+lKqpSbCZiE47JCczeSXyVFe3oNn3zpDARijI4jQS/wa7IkX7josviPPlaIGcFpt/
+b4x9Pv/hKHszkc2rWOcM3NbusTUl5CE+RuQyQal9GoEn8dn9qLJF6b4/u9AXG9M/
+HrTaSntpa2ER1fkL3DSlcq6xcOAk/l75UHtvea5D4aRuD0O9BppRqcPJTvZ7fNMl
+tnSbodZ8jnf9WTeaBPNWtOwW4SJ7NqihKG47SqCXoLGZN4ISuLwYc6zxCJIKT5xx
+TiDMkMro/X1F7mPFpkPPm7z2yvIZ2DaiZ2Nfr58QQHjn6NBhV6r92XodoU8STTIG
+dpAU8tFYi329NJW6UN6hdpN13lllsMrIEpkW/9aQxTrhBjINmZDFFJobzlZdSSRU
+LLuRB3/Uh1JvJR/hJeNDTLuw2QcFZHidske2DK2rtO+5irxqTexS/ycb1gu0wLBZ
+yX6+F0O1oRYujhmq+nWQ78ut5ZbioLGeMmj7t0Ojk/Jz2D4iPjoz55Z0kthcO+Rv
+Ezk24NXqR5fg94ZrHEkp7n/QWo31+CNRzPcrkbWSJxGE6Neq6zxOhoOGxuf1GOck
+ALR3R/Kmh/Rap2b3QEbh
+=gvFU
 -----END PGP SIGNATURE-----
